[package]
name = "sys-datetime"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]

[dependencies]
serde = "1"
regex = "1"
sqlx = { version = "0.6", optional = true }
