[package]
name = "sys-datetime"
version = "1.0.1"
edition = "2021"
license = "MIT"
authors = ["lipogem"]
description = "datetime"
readme = "README.md"
keywords = ["datetime", "date", "time"]
repository = "https://github.com/lipogem/sys-datetime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]

[dependencies]
serde = "1"
regex = "1"
sqlx = { version = "0.6", optional = true }
